src/test/ui/feature-gates/feature-gate-const_generics-struct.rs
// gate-test-const_generics

struct Foo<const X: usize>([(); X]); //~ ERROR const generics are unstable

fn main() {}
